# tfmicro-cmake

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
resources/: CMakeLists.txt
resources/mnist/: mnist.cpp  mnist.h  mnist_model.tflite  q_mnist_model.tflite
tfmicro/: CMakeLists.txt
tfmicro/tensorflow/lite/micro/: debug_log.cc
tfmicro/tf/: tf.cpp  tf.h
